# magiframe

./: .gitignore  .lintstagedrc.js  README.md  biome.json  bun.lockb  package.json
api/: Cargo.toml  development.env
api/src/: main.rs
api/src/_entry/: app.rs  boot.rs  mod.rs  state.rs
api/src/_utils/: error.rs
api/src/ai/: error.rs  service.rs
api/src/config/: service.rs
api/src/image/: controller.rs  error.rs  mod.rs  service.rs  test.http
api/src/image/_utils/: const.rs  lines.rs  mod.rs
magiframe-api/: .lintstagedrc.js
