[package]
name = "magiframe-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
dotenv = "0.15.0"
edge-detection = "0.2.6"
hyper = { version = "1.1.0", features = ["full"] }
image = { version = "0.24.8", features = ["gif"] }
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
